--- a/mainApp/templates/mainApp/base.html
+++ b/mainApp/templates/mainApp/base.html
@@ -5,9 +5,11 @@
 <head>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+
   <title>bosfor.ua</title>
 </head>
 
