Add user(login/register forms, html)

--- a/mainApp/templates/mainApp/base.html
+++ b/mainApp/templates/mainApp/base.html
@@ -27,7 +27,7 @@
             <i class="fas fa-headset"></i>
             <span>Служба підтримки</span>
           </a>
-          <a href="#" class="menu-item">
+          <a href="{% url 'register' %}" class="menu-item">
             <i class="fas fa-user"></i>
             <span>Особистий кабінет</span>
           </a>
