--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,7 +1,7 @@
 {% extends "mainApp/base_login.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-<div class="login-content-section">
+<div class="login-content-section align-items__start">
         <div class="login-content">
             <h2 class="title-base section-title enter-title">Увійти або зареєструватися</h2>
 
