--- a/mainApp/templates/mainApp/base.html
+++ b/mainApp/templates/mainApp/base.html
@@ -97,7 +97,7 @@
 
               {% for item in block.items %}
               {% if item.title == 'Перевізникам' %}
-                <a href="{% url 'create_trip_view' %}">{{ item.title }}</a>
+                <a href="{% url 'register_carrier' %}">{{ item.title }}</a>
               {% else %}
                 <a>{{ item.title }}</a>
               {% endif%}
