--- a/mainApp/templates/mainApp/profile.html
+++ b/mainApp/templates/mainApp/profile.html
@@ -1,4 +1,4 @@
-{% extends "main/base_profile.html" %}
+{% extends "mainApp/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="content-section">
@@ -6,17 +6,12 @@
         <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
         <div class="media-body flex">
           <h2 class="account-heading">Wellcome, {{ user.username }}!</h2>
-          <p class="text-secondary">{{ user.email }}</p>
+
         </div>
       </div>
         <div class="flexSpaceBetween">
-            <a class="menuBlock {% if request.resolver_match.url_name == 'all_notice' %}active{% endif %}" href="#">Все объявления</a>
+            <a  href="#">Все объявления</a>
 
-            <a class="menuBlock {% if request.resolver_match.url_name == 'my_notice' %}active{% endif %}" href="#">Мои объявления</a>
-
-            <a class="menuBlock {% if request.resolver_match.url_name == 'hour24_notice' %}active{% endif %}" href="#">за 24 часа</a>
-
-            <a class="menuBlock {% if request.resolver_match.url_name == 'favorite_notice' %}active{% endif %}" href="#">Избранные</a>
         </div>
     </div>
  <div class="main">
