--- a/mainApp/templates/mainApp/base.html
+++ b/mainApp/templates/mainApp/base.html
@@ -54,7 +54,9 @@
 
 
 
-       {% block content %}
+    {% block content %}
+
+
     {% endblock %}
 
 
@@ -122,7 +124,7 @@
       </div>
     </div>
 
-
+ </div>
 
 
 </body>
