--- a/mainApp/static/css/styles.css
+++ b/mainApp/static/css/styles.css
@@ -277,6 +277,26 @@ body{
    background-color: #2dd1ff;
 }
 
+.main-wrapper_ref-section{
+    display:flex;
+    justify-content:space-around;
+    align-items: center;
+    max-width:50%;
+    color: var(--color-secondary);
+}
+
+.main-wrapper_ref-section a {
+  color: var(--color-secondary);
+  text-decoration: none;
+}
+
+.main-wrapper_ref-section a:hover {
+  color: var(--color-accent-hover);
+}
+
+.main-wrapper_ref-section a.active {
+  color: var(--color-accent);
+}
 
 /* =============================
     REDIRECTION SECTION
@@ -499,7 +519,7 @@ body{
    ============================= */
 
 .title-base {
-    color: var(--color-secondary);;
+    color: var(--color-secondary);
     font-weight: 400;
     margin-bottom: 10px;
     line-height: 1.4;
@@ -638,18 +658,42 @@ color: var(--color-accent);
   border-radius: 3px;
   gap: 5px;
   box-sizing: border-box;
+  border-bottom: 2px solid grey;
+  margin-bottom:5px;
 }
 
+.form-fields-add-trip-col:first-child {
+     width: 80%;
+}
+.form-fields-add-trip-col:last-child {
+     width: 20%;
+}
+.form-fields-add-trip-col_1-row{
+    display:flex;
+    width:100%;
+}
+.form-fields-add-trip-col_2-row{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    width:100%;
+    height:100%;
+}
+.form-fields-add-trip-col_2-row .form-row-add-trip{
+    max-width: 80%;
+    width: 80%;
+    height:80%;
+}
 .form-row-add-trip {
-    max-width: 20%;
-    width: 20%;
+    max-width: 33%;
+    width: 33%;
     margin-bottom: 5px;
     display: flex;
     flex-direction: column;
-     justify-content: flex-start;
+    justify-content: flex-start;
     height: 60px;
-    border:1px solid grey;
-     padding: 5px 10px;
+    border: 1px solid var(--color-gray-light);;
+    padding: 5px 10px;
 }
 
 .form-row-add-trip  label {
@@ -934,6 +978,114 @@ border-radius: 0 0 6px 6px;
 
 
 
+/*==============================
+        CARRIER-TRIP
+  =============================*/
+.carrier-trip-wrapper{
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+}
+
+.carrier-trip-segment {
+  position: relative;
+  width: 100%;
+  height: auto;
+  background-color: var(--color-white);
+  border: 1px solid var(--color-orange);
+  border-radius: 6px;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 5;
+  margin-bottom:25px;
+}
+
+
+  .carrier-trip-wrapper-col-left{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width:70%;
+    position:relative;
+}
+.carrier-trip-wrapper-col-right{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position:relative;
+     width:30%
+}
+.carrier-trip-grey-segment{
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width:100%;
+    height:50px;
+    background-color: var(--color-background);
+    border-radius: 0 0 6px 6px;
+}
+
+
+.carrier-trip-item {
+      position: relative;
+      width: 100%;
+      max-height:40px;
+      height:40px;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      gap: 10px;
+      margin-top: 5px;
+      padding: 10px;
+      margin-bottom:5px;
+}
+
+.carrier-trip-icons {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.carrier-vertical-dashed-line {
+    position:absolute;
+    left:0;
+    top:0;
+    z-index:10;
+    display:inline;
+    width: 1px;
+    background: repeating-linear-gradient(
+    to bottom,
+    var(--color-secondary),
+    var(--color-secondary) 10px,
+    transparent 10px,
+    transparent 20px
+  );
+  height: 100%;
+}
+
+
+@media (max-width: 1000px) {
+    .carrier-trip-item .detail-trip-title{
+    font-size:24px;
+    }
+
+
+}
+@media (max-width: 864px) {
+    .carrier-trip-item .detail-trip-title{
+    font-size:18px;
+    }
+    .carrier-trip-item .detail-trip-subtitle{
+    font-size:16px;
+    }
+
+
+}
 
 /* =============================
     LOGIN
