--- a/mainApp/static/css/styles.css
+++ b/mainApp/static/css/styles.css
@@ -609,6 +609,10 @@ body{
     font-weight:400;
     margin-right: 10px;
 }
+
+.margin-top{
+    margin-top:40px;
+}
 .detail-trip-subtitle{
     font-size: 14px;
     color: var(--color-secondary);
@@ -1024,9 +1028,10 @@ border-radius: 0 0 6px 6px;
     justify-content: space-around;
     align-items: center;
     width:100%;
-    height:50px;
+    height:30px;
     background-color: var(--color-background);
     border-radius: 0 0 6px 6px;
+    margin-top:35px;
 }
 
 
