--- a/mainApp/templates/mainApp/carrier_trips.html
+++ b/mainApp/templates/mainApp/carrier_trips.html
@@ -31,9 +31,14 @@
                  <div class="carrier-trip-wrapper-col-left">
                         {% for route in route_list %}
                           <div class="carrier-trip-item">
-                              <div class="detail-trip-title">
+                              <div class="flex-column">
+                              <div class="detail-trip-title{% if trip.has_eticket %} margin-top{% endif %}">
                                 {{ route.from_city.name }} → {{ route.to_city.name }}
                               </div>
+                                  <div class="detail-trip-subtitle">
+                                {{ route.from_place }} → {{ route.to_place }}
+                              </div>
+                                  </div>
                               <div class="detail-trip-subtitle">
                                 {{ route.departure_datetime|date:"d.m.Y H:i" }} → {{ route.arrival_datetime|date:"d.m.Y H:i" }}
                               </div>
